TestSuite/errors/err0357_named_local_record3.pas
var global: integer;

type int = integer;

type Class1<T,T1> = class
  classfield: integer;
  const cc = 2;
  function p(pa,pb: real): integer;
  type int1 = record
        j: T := 1;
      end;
  begin
    
  end;  
end;  
  
begin
end.